# imgui_websocket

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-projects.sh
examples/: CMakeLists.txt  common.h  examples-common.h  localhost-root-path.in.hpp
examples/basic-null/: CMakeLists.txt  index.html  main.cpp
examples/basic-sdl2/: CMakeLists.txt  basic-sdl2.hpp  main.cpp
examples/demo-null/: CMakeLists.txt  demo-null.hpp  index.html  main.cpp
examples/textures-null/: CMakeLists.txt  main.cpp  textures-null.hpp
include/imgui-ws/: imgui-draw-data-compressor.h  imgui-ws.h
scripts/: bash-tools.sh
src/: CMakeLists.txt  common.h  compressor-xor-rle-per-draw-list-with-vtx-offset.cpp  compressor-xor-rle-per-draw-list.cpp  imconfig.h.in  imgui-ws-int16.js  imgui-ws-int32.js  imgui-ws.cpp
src/project-demo/: CMakeLists.txt
src/project-demo/cmake/: imgui-websocket.cmake
src/project-demo/demo-ws/: CMakeLists.txt  index.html  localhost-root-path.in.hpp  main.cpp  project-demo.hpp  project-demo.in.hpp
tools/: common.h
tools/compressor-benchmark/: CMakeLists.txt
